--- a/langs/woocommerce-jetpack.pot
+++ b/langs/woocommerce-jetpack.pot
@@ -9,9 +9,9 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0\n"
-"X-Poedit-Basepath: ..\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.0.1\n"
+"X-Poedit-Basepath: ..\n"
 "X-Poedit-KeywordsList: __;_e;__ngettext:1,2;_n:1,2;__ngettext_noop:1,2;"
 "_n_noop:1,2;_c;_nc:4c,1,2;_x:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2;_ex:1,2c;"
 "esc_attr__;esc_attr_e;esc_attr_x:1,2c;esc_html__;eschtml_e;esc_html_x:1,2c;"
@@ -15075,8 +15075,8 @@ msgstr ""
 
 #: includes/settings/wcj-settings-payment-gateways-fees.php:32
 msgid ""
-"If you have not klarna plugin install first <a href=\"https://wordpress.org/"
-"plugins/klarna-payments-for-woocommerce/\">Payments</a> page"
+"If you do not have the Klarna plugin installed first<a href=\"https://"
+"wordpress.org/plugins/klarna-payments-for-woocommerce/\">Payments</a>"
 msgstr ""
 
 #: includes/settings/wcj-settings-payment-gateways-fees.php:52
@@ -18151,8 +18151,8 @@ msgstr ""
 
 #: includes/settings/wcj-settings-product-price-by-formula.php:94
 msgid ""
-"If you are facing promotional  pricing issue in booking product then enable "
-"the section"
+"If you are facing a promotional  pricing issue in booking products then "
+"enable the section"
 msgstr ""
 
 #: includes/settings/wcj-settings-product-price-by-formula.php:100
